(tmux) select the pane before attempting to open a url
The url won't open if you try to open it before selecting the pane.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,9 +56,9 @@ if-shell -F "$NERDFONT_ENABLE" {
 }
 bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep 1; tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
-bind-key -T copy-mode MouseDown1Pane run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; select-pane
-bind-key -T copy-mode-vi MouseDown1Pane run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; select-pane
-bind-key -T root MouseDown1Pane run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; select-pane -t = \; send-keys -M
+bind-key -T copy-mode MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
+bind-key -T copy-mode-vi MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
+bind-key -T root MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; send-keys -M
 
 # navigate windows
 bind-key -n M-H previous-window
