(tmux) show seconds in clock

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -189,7 +189,7 @@ set -g @battery-icon-color "#{?#{==:#{E:@battery-status},1},#{E:@battery-status-
 set -g @battery-icon "#{E:@battery-icon-color}#(#{@get_battery_icon} \"$(#{@battery-status-script})\" \"$(#{@battery-charge-script})\")"
 set -g @battery-tray-icon "#{?#{E:@battery-percentage}, #{E:@battery-icon}#{E:@battery-percentage},}"
 set -g @separator "#[fg=colour8]│"
-set -g @datetime "#[fg=default]%a, %b %-e %H:%M"
+set -g @datetime "#[fg=default]%a, %b %-e %H:%M:%S"
 set -g @online-tray-icon "#(~/.tmux/plugins/tmux-online-status/scripts/online_status_icon.sh)"
 set -g @tray-icons "#{E:@online-tray-icon}  #{E:@volume-tray-icon} #{E:@battery-tray-icon}"
 set -g @tty-info "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@tray-icons} #{E:@separator} #{E:@datetime} #{E:@separator} ,}"
