(tmux) messages display for 2 seconds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,7 @@ set -s escape-time 0
 set -g base-index 1
 set -g prefix C-Space
 set -g pane-border-format ''
-set-option -g display-time 1500
+set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
 # By setting a default-command, tmux won't use its default behaviour which creates a login shell
@@ -54,7 +54,7 @@ if-shell -F "$NERDFONT_ENABLE" {
 } {
     set -g @reload_symbol "⟳"
 }
-bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep 1; tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
+bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
 bind-key -T copy-mode MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
