(tmux) get plugin manager path from environment variable

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -172,26 +172,26 @@ if-shell -F "$NERDFONT_ENABLE" {
 } {
     set -g @volume_symbol "🔊"
 }
-set -g @volume-percentage "#(~/.tmux/plugins/tmux-plugin-volume/scripts/volume_percentage.sh)"
+set -g @volume-percentage "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-plugin-volume/scripts/volume_percentage.sh)"
 set -g @volume-tray-icon "#[fg=default]#{?#{E:@volume-percentage},#{@volume_symbol}#{E:@volume-percentage}%,}"
 if-shell -F "$NERDFONT_ENABLE" {
     set -g @get_battery_icon "python -c \"import sys; print([['\uf579','\uf57a','\uf57b','\uf57d','\uf57e','\uf57f','\uf580','\uf581'], ['\uf585','\uf585','\uf586','\uf587','\uf588','\uf589','\uf58a','\uf584'], ['\uf590'] * 8][int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
 } {
     set -g @get_battery_icon "python -c \"import sys; print(([['🔋'] * 8] * 3)[int(sys.argv[1])][int(sys.argv[2])] + ' ');\""
 }
-set -g @battery-percentage "#[fg=default]#(~/.tmux/plugins/tmux-battery/scripts/battery_percentage.sh)"
-set -g @battery-status-script "~/.tmux/plugins/tmux-battery/scripts/battery_icon_status.sh"
+set -g @battery-percentage "#[fg=default]#(${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_percentage.sh)"
+set -g @battery-status-script "${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_icon_status.sh"
 set -g @battery-status "#(#{@battery-status-script})"
-set -g @battery-charge-script "~/.tmux/plugins/tmux-battery/scripts/battery_icon_charge.sh"
+set -g @battery-charge-script "${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_icon_charge.sh"
 set -g @battery-charge "#(#{@battery-charge-script})"
-set -g @battery-status-fg "#(~/.tmux/plugins/tmux-battery/scripts/battery_color_status.sh fg)"
-set -g @battery-charge-fg "#(~/.tmux/plugins/tmux-battery/scripts/battery_color_charge.sh fg)"
+set -g @battery-status-fg "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_color_status.sh fg)"
+set -g @battery-charge-fg "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-battery/scripts/battery_color_charge.sh fg)"
 set -g @battery-icon-color "#{?#{==:#{E:@battery-status},1},#{E:@battery-status-fg},#{E:@battery-charge-fg}}"
 set -g @battery-icon "#{E:@battery-icon-color}#(#{@get_battery_icon} \"$(#{@battery-status-script})\" \"$(#{@battery-charge-script})\")"
 set -g @battery-tray-icon "#{?#{E:@battery-percentage}, #{E:@battery-icon}#{E:@battery-percentage},}"
 set -g @separator "#[fg=colour8]│"
 set -g @datetime "#[fg=default]%a, %b %-e %H:%M:%S"
-set -g @online-tray-icon "#(~/.tmux/plugins/tmux-online-status/scripts/online_status_icon.sh)"
+set -g @online-tray-icon "#(${TMUX_PLUGIN_MANAGER_PATH}tmux-online-status/scripts/online_status_icon.sh)"
 set -g @tray-icons "#{E:@online-tray-icon}  #{E:@volume-tray-icon} #{E:@battery-tray-icon}"
 set -g @tty-info "#{?#{m/r:tty[0-9]*,#{client_tty}},#{E:@tray-icons} #{E:@separator} #{E:@datetime} #{E:@separator} ,}"
 set -g @session "#[range=left]#[bg=default,fg=default]#S"
