(tmux) fix: move cursor to where the mouse was clicked
This new algorithm covers edge-cases where you can't tell where the cursor will go when you insert a left/arrow key.
For example in fish shell (the '|' represents the cursor):

prompt $ echo \
    |

hitting left arrow here would move the cursor here:

prompt$ echo \|

and skip the indentation entirely.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,8 +58,7 @@ bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_promp
 
 bind-key -T copy-mode MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
-set -g @mouse_cursor_x_difference '#{e|-:#{mouse_x},#{cursor_x}}'
-bind-key -T root MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; if-shell -F '#{&&:#{&&:#{==:#{pane_current_command},#{b:default-shell}},#{e|==:#{mouse_y},#{cursor_y}}},#{e|!=:#{mouse_x},#{cursor_x}}}' {if-shell -F '#{e|<:#{E:@mouse_cursor_x_difference},0}' {send-keys -F -N '#{e|*:#{E:@mouse_cursor_x_difference},-1}' -t= left} {send-keys -F -N '#{E:@mouse_cursor_x_difference}' -t= right}} \; send-keys -M
+bind-key -T root MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" 2>&1' \; run-shell "tmux-move-cursor.sh '#{mouse_x}' '#{mouse_y}' '#{cursor_x}' '#{cursor_y}' '#{session_id}' '#{window_id}' '#{pane_id}' 2>&1" \; send-keys -M
 
 # navigate windows
 bind-key -n M-H previous-window
