(kitty) cursor doesn't stop blinking

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -79,3 +79,5 @@ include current-theme.conf
 
 # Disable check for updates. I do that as part of a larger upgrade script.
 update_check_interval 0
+
+cursor_stop_blinking_after 0
