--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -14,6 +14,8 @@
     ~/.vim: {}
     ~/.local/bin: {}
     ~/.local/share/nvim: {}
+    ~/.ipython:
+        recursive: true
 
 - link:
     ~/.tmux.conf: tmux/tmux.conf
