switch light colorscheme from solarized light to light owl

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,38 +1,38 @@
-# Solarized Light
+# Light Owl
 
 # Terminal
 ########################################
 # Darker than color7
-foreground #52676f
+foreground #30454d
 # Should match color0
-background #fdf6e3
+background #FFFFFF
 # Let selected text retain its color
 selection_foreground  none
 # Should match color8
-selection_background #eee8d5
+selection_background #F0F0F0
 url_color #cb4b16
 # Should match foreground
-cursor #52676f
+cursor #30454d
 # Should match background
-cursor_text_color #fdf6e3
+cursor_text_color #FFFFFF
 
 # Blacks
 ########################################
 # Background
-color0 #fdf6e3
+color0 #FFFFFF
 # Statusline, current line highlighting
-color8 #efead9
+color8 #F0F0F0
 # Floats
-color16 #fbedca
+color16 #e5e5e5
 # Darker than color0 -- folded lines
-color24 #fcf1d5
+color24 #efefef
 # Floats
-color32 #E4DCC7
+color32 #e9eef1
 
 # Reds
 ########################################
-color1   #dc322f
-color9   #dc322f
+color1   #de3d3b
+color9   #de3d3b
 # Background color for the non-emphasized part of a removed line in a git diff
 color17 #FFD7D7
 # Background color for the emphasized part of a removed line in a git diff
@@ -40,8 +40,8 @@ color25 #FFAFAF
 
 # Greens
 ########################################
-color2   #859900
-color10  #859900
+color2   #08916a
+color10  #08916a
 # Background color for the non-emphasized part of an added line in a git diff
 color18 #D7FFD7
 # Background color for the emphasized part of an added line in a git diff
@@ -49,26 +49,30 @@ color26 #96D596
 
 # Yellows
 ########################################
-color3   #b58900
+color3   #E0AF02
 # Orange
-color11  #cb4b16
+color11  #ffaa33
 
 # Blues
 ########################################
-color4  #268bd2
-color12 #268bd2
+color4  #288ed7
+color12 #55b4d4
 
 # Magentas
 ########################################
-color5   #d33682
-color13  #6c71c4
+# swap this with color 6
+color5   #49d0c5
+# swap this with color 14
+color13  #2AA298
 # Background color for a moved line in a git diff (source of move)
 color21 #e99ac0
 
-# Cyans
+# Cyans 
 ########################################
-color6   #2aa198
-color14  #2aa198
+# swap this with color 5
+color6   #994cc3
+# swap this with color 13
+color14  #d6438a
 # Background color for a moved line in a git diff (destination of move)
 color22 #85dfd8
 
@@ -76,4 +80,4 @@ color22 #85dfd8
 ########################################
 color7   #262626
 # Darker than color8 -- comments
-color15  #9d9e99
+color15  #979893
