--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -51,7 +51,7 @@ color26 #1d572c
 ########################################
 color3   #EBCB8B
 # Orange
-color11  #d08770
+color11  #EBCB8B
 
 # Blues
 ########################################
@@ -77,3 +77,8 @@ color22 #306a7b
 color7   #E5E9F0
 # Lighter than color8 -- comments
 color15  #626f89
+
+# Other
+########################################
+# strings
+color50 #A3BE8C
