--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -9,7 +9,7 @@ background #FFFFFF
 # Let selected text retain its color
 selection_foreground  none
 # Should match color8
-selection_background #F0F0F0
+selection_background #e7e7e7
 url_color #cb4b16
 # Should match foreground
 cursor #30454d
@@ -21,7 +21,7 @@ cursor_text_color #FFFFFF
 # Background
 color0 #FFFFFF
 # Statusline, current line highlighting
-color8 #F0F0F0
+color8 #e7e7e7
 # Floats
 color16 #e5e5e5
 # Darker than color0 -- folded lines
@@ -31,8 +31,8 @@ color32 #e9eef1
 
 # Reds
 ########################################
-color1   #de3d3b
-color9   #de3d3b
+color1   #ee3d3b
+color9   #ee3d3b
 # Background color for the non-emphasized part of a removed line in a git diff
 color17 #FFD7D7
 # Background color for the emphasized part of a removed line in a git diff
@@ -49,19 +49,19 @@ color26 #96D596
 
 # Yellows
 ########################################
-color3   #E0AF02
+color3   #e9873a
 # Orange
-color11  #ffaa33
+color11  #e9873a
 
 # Blues
 ########################################
 color4  #288ed7
-color12 #55b4d4
+color12 #288ed7
 
 # Magentas
 ########################################
 # swap this with color 6
-color5   #49d0c5
+color5   #2AA298
 # swap this with color 14
 color13  #2AA298
 # Background color for a moved line in a git diff (source of move)
@@ -81,3 +81,8 @@ color22 #85dfd8
 color7   #262626
 # Darker than color8 -- comments
 color15  #979893
+
+# Other
+########################################
+# strings
+color50 #cb4b16
