--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -158,14 +158,16 @@ if-shell -F "$NERDFONT_ENABLE" {
     set -g @internet_connected_symbol "\uf1eb "
     set -g @internet_disconnected_symbol "\uf1eb "
     set -g @new_window_symbol "＋"
+    set -g @zoom_indicator "\uf792 "
 } {
     set -g @internet_connected_symbol "🜃 "
     set -g @internet_disconnected_symbol "🜃 "
     set -g @new_window_symbol "＋"
+    set -g @zoom_indicator "[MAX]"
 }
 set -g @superscript_number "python -c \"import sys; index = int(sys.argv[1]); superscript_numbers = ['¹', '²', '³', '⁴', '⁵', '⁶', '⁷', '⁸', '⁹']; print(superscript_numbers[index - 1] if index <= 9 else '⁺')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15]#(#{@superscript_number} #I) #W"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=colour6]#(#{@superscript_number} #I)#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore] [MAX],}#[nounderscore]"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=colour6]#(#{@superscript_number} #I)#[fg=terminal] #W#{?window_zoomed_flag,#[fg=#{@standoutcolor}#,nounderscore]#{@zoom_indicator},}#[nounderscore]"
 set -g @window-info-format "#{W: #{E:@window-status-format} , #{E:@window-status-current-format} }#[range=right] #[fg=colour15]#{@new_window_symbol} "
 set -g status-left "#{E:@window-info-format}  #{tmux_mode_indicator}"
 set -g status-left-length 999
