(kitty) color and font tweaks

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -21,7 +21,7 @@ cursor_text_color #FFFFFF
 # Background
 color0 #FFFFFF
 # Statusline, current line highlighting
-color8 #e7e7e7
+color8 #F0F0F0
 # Floats
 color16 #e5e5e5
 # Darker than color0 -- folded lines
@@ -86,3 +86,5 @@ color15  #979893
 ########################################
 # strings
 color50 #cb4b16
+# tmux accent color
+color51 #288ed7
