(tmux) center indicators

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,7 +54,7 @@ if-shell -F "$NERDFONT_ENABLE" {
 } {
     set -g @reload_symbol "⟳"
 }
-bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
+bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_prompt "#[bold bg=#{@bgcolor} fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@reload_symbol} RELOADED#[noreverse]#{@right_symbol}"\; refresh-client -S; sleep $(( $(tmux display -p "#{display-time}") / 1000 )); tmux set -u @mode_indicator_custom_prompt\; refresh-client -S'
 
 bind-key -T copy-mode MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
@@ -234,9 +234,9 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
         set -g @copy_symbol "©"
         set -g @sync_symbol "🗇 "
     }
-    set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_copy_prompt "#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
-    set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor}]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@prefix_symbol} PREFIX#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_copy_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@copy_symbol} COPY#[noreverse]#{@right_symbol}"
+    set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=centre]#{@left_symbol}#[reverse]#{@sync_symbol} SYNC#[noreverse]#{@right_symbol}"
     set -g @mode_indicator_empty_prompt '#[bg=default] '
 
 set -g @plugin 'MunifTanjim/tmux-suspend'
@@ -249,7 +249,7 @@ set -g @plugin 'MunifTanjim/tmux-suspend'
     set -g @suspend_suspended_options " \
         pane-active-border-style::fg=#{@standoutcolor} dim, \
         pane-border-style::fg=#{@bordercolor} dim, \
-        @mode_indicator_custom_prompt::#[italics bg=default fg=#{@standoutcolor} align=centre]#{@suspended_symbol} passthrough, \
+        @mode_indicator_custom_prompt::#[italics bg=default fg=#{@standoutcolor} align=centre]#{@suspended_symbol} suspended, \
         status-style::dim, \
     "
 
