(kitty) color stuff

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -3,7 +3,7 @@
 # Terminal
 ########################################
 # Darker than color7
-foreground #30454d
+foreground #221e1f
 # Should match color0
 background #FFFFFF
 # Let selected text retain its color
@@ -23,9 +23,9 @@ color0 #FFFFFF
 # Statusline, current line highlighting
 color8 #F0F0F0
 # Floats
-color16 #e5e5e5
+color16 #efefef
 # Darker than color0 -- folded lines
-color24 #efefef
+color24 #e5e5e5
 # Floats
 color32 #e9eef1
 
