--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -51,7 +51,7 @@ color26 #1d572c
 ########################################
 color3   #EBCB8B
 # Orange
-color11  #EBCB8B
+color11  #d08770
 
 # Blues
 ########################################
