(kitty) color things

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -2,8 +2,8 @@
 
 # Terminal
 ########################################
-# Darker than color7
-foreground #221e1f
+# Should match color7
+foreground #403f53
 # Should match color0
 background #FFFFFF
 # Let selected text retain its color
@@ -21,7 +21,7 @@ cursor_text_color #FFFFFF
 # Background
 color0 #FFFFFF
 # Statusline, current line highlighting
-color8 #F0F0F0
+color8 #e8e8e8
 # Floats
 color16 #efefef
 # Darker than color0 -- folded lines
@@ -51,7 +51,7 @@ color26 #96D596
 ########################################
 color3   #e9873a
 # Orange
-color11  #e9873a
+color11  #cb4b16
 
 # Blues
 ########################################
@@ -78,7 +78,7 @@ color22 #85dfd8
 
 # Whites
 ########################################
-color7   #262626
+color7   #403f53
 # Darker than color8 -- comments
 color15  #979893
 
