--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -2,7 +2,7 @@
 
 # Terminal
 ########################################
-# Lighter than color7
+# Should match color7
 foreground #D8DEE9
 # Should match color0
 background #232731
@@ -74,7 +74,7 @@ color22 #306a7b
 
 # Whites
 ########################################
-color7   #E5E9F0
+color7   #D8DEE9
 # Lighter than color8 -- comments
 color15  #626f89
 
