--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -40,8 +40,8 @@ color25 #FFAFAF
 
 # Greens
 ########################################
-color2   #08916a
-color10  #08916a
+color2   #2AA298
+color10  #2AA298
 # Background color for the non-emphasized part of an added line in a git diff
 color18 #D7FFD7
 # Background color for the emphasized part of an added line in a git diff
@@ -81,10 +81,3 @@ color22 #85dfd8
 color7   #403f53
 # Darker than color8 -- comments
 color15  #979893
-
-# Other
-########################################
-# strings
-color50 #cb4b16
-# tmux accent color
-color51 #288ed7
