--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -27,7 +27,7 @@ color16 #efefef
 # Darker than color0 -- folded lines
 color24 #e5e5e5
 # Floats
-color32 #e9eef1
+color32 #f1f3f5
 
 # Reds
 ########################################
