--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -12,7 +12,7 @@ selection_foreground  none
 selection_background #e7e7e7
 url_color #cb4b16
 # Should match foreground
-cursor #30454d
+cursor #403f53
 # Should match background
 cursor_text_color #FFFFFF
 
@@ -21,7 +21,7 @@ cursor_text_color #FFFFFF
 # Background
 color0 #FFFFFF
 # Statusline, current line highlighting
-color8 #e8e8e8
+color8 #F0F0F0
 # Floats
 color16 #efefef
 # Darker than color0 -- folded lines
