--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -25,7 +25,7 @@ color8 #2e3440
 # Darker than color0 -- floats
 color16 #20232d
 # Lighter than color0 -- folded lines
-color24 #282c38
+color24 #2e3440
 # Darker than color16 -- floats
 color32 #1d2129
 
