--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -51,7 +51,7 @@ color26 #96D596
 ########################################
 color3   #e9873a
 # Orange
-color11  #cb4b16
+color11  #c96765
 
 # Blues
 ########################################
@@ -81,3 +81,8 @@ color22 #85dfd8
 color7   #403f53
 # Darker than color8 -- comments
 color15  #979893
+
+# Other
+########################################
+# strings
+color50 #c96765
