--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -77,3 +77,8 @@ color22 #306a7b
 color7   #D8DEE9
 # Lighter than color8 -- comments
 color15  #626f89
+
+# Other
+########################################
+# strings
+color50 #A3BE8C
