--- a/fontconfig/local.conf
+++ b/fontconfig/local.conf
@@ -26,6 +26,31 @@
         </prefer>
     </alias>
 
+    <alias>
+        <family>ui-monospace</family>
+        <prefer>
+            <family>Source Code Pro Medium</family>
+            <family>Source Han Mono</family>
+            <family>Symbols Nerd Font Mono</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>ui-serif</family>
+        <prefer>
+            <family>Source Serif 4</family>
+            <family>Source Han Serif</family>
+            <family>Symbols Nerd Font</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>ui-sans-serif</family>
+        <prefer>
+            <family>Source Sans 3</family>
+            <family>Source Han Serif</family>
+            <family>Symbols Nerd Font</family>
+        </prefer>
+    </alias>
+
     <!--
         Whenever Source Code Pro (SCP) is requested, use SCP Medium instead. The regular SCP is a little too thin for me.
     -->
