--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,7 +44,7 @@ window_padding_width 4 2 4 2
 # NOTE: the effects of changing this setting when reloading config are undefined.
 hide_window_decorations yes
 
-background_opacity .99
+background_opacity 1
 
 # Allow changing of the background_opacity dynamically by changing this setting and reloading the config.
 dynamic_background_opacity yes
