--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -56,6 +56,7 @@
     ~/.config/direnv/direnv.toml: direnv/direnv.toml
     ~/.ignore: ignore
     ~/.default-cargo-crates: asdf/default-cargo-crates
+    ~/.default-python-packages: asdf/default-python-packages
     ~/.config/pipr/pipr.toml: pipr/pipr.toml
     ~/.config/brewfile/Brewfile: brew/Brewfile
     ~/.config/pipx/pipx-packages: pipx/pipx-packages
