--- a/vscode/code.desktop
+++ b/vscode/code.desktop
@@ -2,7 +2,7 @@
 Name=Visual Studio Code
 Comment=Code Editing. Redefined.
 GenericName=Text Editor
-Exec=/usr/share/code/code --unity-launch --enable-features=UseOzonePlatform --ozone-platform=wayland %F
+Exec=/bin/env code --unity-launch %F
 Icon=com.visualstudio.code
 Type=Application
 StartupNotify=false
