--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -73,6 +73,7 @@
         glob: true
         path: ./ipython/startup/*
     ~/.config/lsd: lsd
+    ~/.fbtermrc: fbterm/fbtermrc
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
