--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -74,6 +74,9 @@
         path: ./ipython/startup/*
     ~/.config/lsd: lsd
     ~/.fbtermrc: fbterm/fbtermrc
+    ~/.vale.ini: vale/vale.ini
+    ~/.config/vale/styles/base: vale/styles/base
+    ~/.config/vale/styles/ignore.txt: vale/styles/ignore.txt
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
