--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -135,8 +135,8 @@ set -g pane-border-status bottom
 
 # Panes
 set -g pane-border-lines single
-set -g pane-active-border-style "fg=colour15,dim"
-set -g pane-border-style "fg=#{@bordercolor}"
+set -g pane-active-border-style "fg=colour15"
+set -g pane-border-style "fg=colour8"
 
 # Clock Mode
 set -g clock-mode-colour 'cyan'
