--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -16,6 +16,7 @@
     ~/.local/share/nvim: {}
     ~/.ipython:
         recursive: true
+    ~/.local/share/applications: {}
 
 - link:
     ~/.tmux.conf: tmux/tmux.conf
@@ -65,7 +66,8 @@
     ~/.dotfiles/.git/hooks/post-merge: install/update_tools.sh
     ~/.markdownlint.jsonc: markdownlint/markdownlint.jsonc
     ~/.local/share/figlet/smblock.tlf: figlet/smblock.tlf
-    ~/.local/share/applications/firefox.desktop: firefox/firefox.desktop
+    ~/.local/share/applications/firefox-dev.desktop: firefox/firefox-dev.desktop
+    ~/.local/share/applications/my-firefox.desktop: firefox/my-firefox.desktop
     ~/.local/share/applications/code.desktop: vscode/code.desktop
     ~/.yashrc: yash/yashrc
     ~/.ipython/profile_default/ipython_config.py: ipython/ipython_config.py
@@ -107,3 +109,6 @@
     -
         description: Link apt configs
         command: fish ./apt/install.fish
+    -
+        description: Link Firefox configs
+        command: sh ./firefox/install.sh
