(kitty) show window titlebar

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,7 +44,7 @@ window_padding_width 6 2 6 2
 
 # Hide the window decorations (title-bar and window borders).
 # NOTE: the effects of changing this setting when reloading config are undefined.
-hide_window_decorations yes
+hide_window_decorations no
 
 background_opacity 1
 
