(kitty) tweak night theme

--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -23,7 +23,7 @@ color0 #232731
 # Lighter than color24 -- status bar, current line highlighting
 color8 #2e3440
 # Darker than color0 -- floats
-color16 #20232d
+color16 #12151f
 # Lighter than color0 -- folded lines
 color24 #2e3440
 # Darker than color16 -- floats
