(fontconfig) use JetBrains Mono instead of Source Code Pro

--- a/fontconfig/local.conf
+++ b/fontconfig/local.conf
@@ -4,7 +4,7 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Source Code Pro Medium</family>
+            <family>JetBrains Mono</family>
             <family>Source Han Mono</family>
             <family>Symbols Nerd Font Mono</family>
         </prefer>
@@ -29,7 +29,7 @@
     <alias>
         <family>ui-monospace</family>
         <prefer>
-            <family>Source Code Pro Medium</family>
+            <family>JetBrains Mono</family>
             <family>Source Han Mono</family>
             <family>Symbols Nerd Font Mono</family>
         </prefer>
@@ -52,14 +52,14 @@
     </alias>
 
     <!--
-        Whenever Source Code Pro (SCP) is requested, use SCP Medium instead. The regular SCP is a little too thin for me.
+        Font overrides
     -->
     <match>
         <test name="family">
-            <string>Source Code Pro</string>
+            <string>Menlo</string>
         </test>
         <edit binding="same" mode="assign" name="family">
-            <string>Source Code Pro Medium</string>
+            <string>JetBrains Mono</string>
         </edit>
     </match>
 </fontconfig>
