--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,15 @@
-font_family      Source Code Pro Medium
-bold_font        Source Code Pro Bold
-italic_font      Source Code Pro Medium Italic
-bold_italic_font Source Code Pro Bold Italic
+font_family      JetBrains Mono
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 
 # Use nerd font symbols for the following code points.
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
 
-font_size 10.5
+font_size 10.3
 
 modify_font cell_width 104%
-modify_font cell_height 130%
+modify_font cell_height 140%
 # So I can see underscores in underlined text
 modify_font underline_position 8
 
