(fontconfig) disable ligatures for jetbrains mono

--- a/fontconfig/local.conf
+++ b/fontconfig/local.conf
@@ -52,6 +52,18 @@
     </alias>
 
     <!--
+        Disable ligatures for JetBrains Mono
+    -->
+    <match target="font">
+        <test name="family">
+            <string>JetBrains Mono</string>
+        </test>
+        <edit name="fontfeatures" mode="assign_replace">
+            <string>calt off</string>
+        </edit>
+    </match>
+
+    <!--
         Font overrides
     -->
     <match>
