(brew) don't track tmux HEAD
It started causing problems with tmux-resurrect.

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -38,7 +38,7 @@ brew "shellcheck"
 brew "sshfs"
 brew "subversion"
 brew "tealdeer"
-brew "tmux", args: ["HEAD"]
+brew "tmux"
 brew "trash-cli"
 brew "tree"
 brew "viddy"
