(linux) use media keys by default on apple keyboards

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -107,3 +107,6 @@
     -
         description: Link Firefox configs
         command: sh ./firefox/install.sh
+    -
+        description: Setup Linux
+        command: sh ./linux/setup
