(kitty) a little transparency

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -46,7 +46,7 @@ window_padding_width 6 2 6 2
 # NOTE: the effects of changing this setting when reloading config are undefined.
 hide_window_decorations yes
 
-background_opacity 1
+background_opacity .97
 
 # Allow changing of the background_opacity dynamically by changing this setting and reloading the config.
 dynamic_background_opacity yes
