--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -1,6 +1,7 @@
 - defaults:
     link:
       create: true
+      force: true
     shell:
       stdin: true
       stdout: true
@@ -75,6 +76,8 @@
     ~/.vale.ini: vale/vale.ini
     ~/.config/vale/styles/base: vale/styles/base
     ~/.config/vale/styles/ignore.txt: vale/styles/ignore.txt
+    ~/.config/nix/nix.conf: nix/nix.conf
+    ~/.config/nix/nix-packages.txt: nix/nix-packages.txt
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
@@ -87,6 +90,9 @@
     - ~/code
 
 - shell:
+    -
+        description: Setup nix
+        command: sh ./nix/install.sh
     -
         description: Build bat cache
         command: bat cache --build
