(brew) add setup script

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -91,6 +91,9 @@
 
 - shell:
     -
+        description: Setup brew
+        command: sh ./brew/install.sh
+    -
         description: Setup nix
         command: sh ./nix/install.sh
     -
