(bash) rename profile to bash_profile
When configuring a login shell, bash will read the first config that exists, in this order: bash_profile, bash_login, profile. I'm renaming this so that it is guaranteed to be read.

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -25,7 +25,7 @@
     ~/.local/share/nvim/vim-plug-snapshot.vim: neovim/vim-plug-snapshot.vim
     ~/.gitconfig: git/gitconfig
     ~/.bashrc: bash/bashrc
-    ~/.profile: bash/profile
+    ~/.bash_profile: bash/bash_profile
     ~/.config/kitty: kitty
     ~/.config/kitty/current-theme.conf:
         path: ~/.config/kitty/night-theme.conf
