(smart-plug) replace asdf and pipenv with nix for managing dependencies

--- a/smart-plug/smart-plug-daemon.service
+++ b/smart-plug/smart-plug-daemon.service
@@ -3,7 +3,7 @@ Description=Smart Plug Daemon
 
 [Service]
 WorkingDirectory=/opt/smart-plug-daemon.d/
-ExecStart=/opt/smart-plug-daemon.d/.venv/bin/python smart-plug-daemon.py
+ExecStart=/home/biggs/.nix-profile/bin/nix-shell --pure --run 'python smart-plug-daemon.py'
 
 [Install]
 WantedBy=multi-user.target
