(login-shell) fix: make sure login shell config gets loaded
When logging in with X11, /bin/sh is used to source startup scripts instead of whatever is in $SHELL. One of the startup scripts is ~/.profile so I've moved all the environment configuration into that file. I also added a `bash_profile` that sources `profile`. This way, the environment will still get configured even when bash is used.

source: https://unix.stackexchange.com/a/88149

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -24,8 +24,9 @@
     ~/.config/nvim/profiles: neovim/profiles
     ~/.local/share/nvim/vim-plug-snapshot.vim: neovim/vim-plug-snapshot.vim
     ~/.gitconfig: git/gitconfig
-    ~/.bashrc: bash/bashrc
-    ~/.bash_profile: bash/bash_profile
+    ~/.bashrc: login-shell/bashrc
+    ~/.bash_profile: login-shell/bash_profile
+    ~/.profile: login-shell/profile
     ~/.config/kitty: kitty
     ~/.config/kitty/current-theme.conf:
         path: ~/.config/kitty/night-theme.conf
