--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -79,6 +79,7 @@
     ~/.config/nix/nix.conf: nix/nix.conf
     ~/.config/nix/nix-packages.txt: nix/nix-packages.txt
     ~/.local/bin/asdf-hook-handler: ./asdf/asdf-hook-handler.sh
+    ~/.local/bin/update-nix-index: ./nix/update-nix-index.sh
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
