--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -47,7 +47,7 @@ bind r run-shell -b 'tmux source ~/.tmux.conf\; set @mode_indicator_custom_promp
 
 bind-key -T copy-mode MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
 bind-key -T copy-mode-vi MouseDown1Pane select-pane \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"'
-bind-key -T root MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; run-shell "tmux-move-cursor.sh '#{mouse_x}' '#{mouse_y}' '#{cursor_x}' '#{cursor_y}' '#{session_id}' '#{window_id}' '#{pane_id}' '#{pane_pid}'" \; send-keys -M
+bind-key -T root MouseDown1Pane select-pane -t = \; run-shell 'tmux-click-url.py "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}"' \; send-keys -M
 
 # navigate windows
 bind-key -n M-H previous-window
