--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -24,9 +24,9 @@
     ~/.config/nvim/profiles: neovim/profiles
     ~/.local/share/nvim/vim-plug-snapshot.vim: neovim/vim-plug-snapshot.vim
     ~/.gitconfig: git/gitconfig
-    ~/.bashrc: login-shell/bashrc
-    ~/.bash_profile: login-shell/bash_profile
-    ~/.profile: login-shell/profile
+    ~/.bashrc: login-shell/bashrc.bash
+    ~/.bash_profile: login-shell/bash_profile.bash
+    ~/.profile: login-shell/profile.sh
     ~/.config/kitty: kitty
     ~/.config/kitty/current-theme.conf:
         path: ~/.config/kitty/night-theme.conf
