(kitty) darker background

--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -5,7 +5,7 @@
 # Should match color7
 foreground #D8DEE9
 # Should match color0
-background #232731
+background #1d212b
 # Let selected text retain its color
 selection_foreground  none
 # Should match color8
@@ -19,7 +19,7 @@ cursor_text_color #232731
 # Blacks
 ########################################
 # Background
-color0 #232731
+color0 #1d212b
 # Lighter than color24 -- status bar, current line highlighting
 color8 #2e3440
 # Darker than color0 -- floats
