--- a/fontconfig/local.conf
+++ b/fontconfig/local.conf
@@ -12,7 +12,7 @@
     <alias>
         <family>serif</family>
         <prefer>
-            <family>Source Serif 4</family>
+            <family>Inter</family>
             <family>Source Han Serif</family>
             <family>Symbols Nerd Font</family>
         </prefer>
@@ -20,7 +20,7 @@
     <alias>
         <family>sans-serif</family>
         <prefer>
-            <family>Source Sans 3</family>
+            <family>Inter</family>
             <family>Source Han Serif</family>
             <family>Symbols Nerd Font</family>
         </prefer>
@@ -37,7 +37,7 @@
     <alias>
         <family>ui-serif</family>
         <prefer>
-            <family>Source Serif 4</family>
+            <family>Inter</family>
             <family>Source Han Serif</family>
             <family>Symbols Nerd Font</family>
         </prefer>
@@ -45,7 +45,7 @@
     <alias>
         <family>ui-sans-serif</family>
         <prefer>
-            <family>Source Sans 3</family>
+            <family>Inter</family>
             <family>Source Han Serif</family>
             <family>Symbols Nerd Font</family>
         </prefer>
