--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -191,7 +191,7 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
 # Saves the state of tmux to a file so it can be restored later
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-    set -g @resurrect-processes 'watch mosh-client vim nvim ssh autossh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared'
+    set -g @resurrect-processes 'watch viddy mosh-client vim nvim ssh autossh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared'
     # This strategy can restore quotes, unlike the default strategy.
     if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
 
