(Linux) fix: theme syncer
- Add logging
- A desktop entry so it can be autostarted (executables don't work in `~/.config/autostart`)

--- a/meta/modules/linux.yaml
+++ b/meta/modules/linux.yaml
@@ -3,4 +3,5 @@
         command: '. ./linux/install.sh'
 
 - link:
-    ~/.config/autostart: ./linux/night-theme-switcher-fix.sh
+    ~/.local/bin/night-theme-switcher-fix.sh: ./linux/night-theme-switcher-fix.sh
+    ~/.config/autostart/theme-sync.desktop: ./linux/theme-sync.desktop
