--- a/smart-plug/smart-plug-daemon.service
+++ b/smart-plug/smart-plug-daemon.service
@@ -3,6 +3,7 @@ Description=Smart Plug Daemon
 
 [Service]
 WorkingDirectory=/opt/smart-plug-daemon.d/
+Environment="NIX_PATH=/home/biggs/.nix-defexpr/channels"
 ExecStart=/home/biggs/.nix-profile/bin/nix-shell --pure --run 'python smart-plug-daemon.py'
 
 [Install]
