--- a/nix/nix.conf
+++ b/nix/nix.conf
@@ -1,1 +1,5 @@
 experimental-features = nix-command flakes
+
+# nix-direnv needs these two in order to work
+keep-derivations = true
+keep-outputs = true
